terraform-awsone/network/route.tf
# #############################################################################
# Create
#   Route tables
#   Route table associations
# #############################################################################
# Routing table for private subnet
resource "aws_route_table" "private" {
    vpc_id = "${aws_vpc.vpc.id}"

    tags = {
        Name        = "${var.environment}-private-route-table"
        Environment = "${var.environment}"
    }
}

# Routing table for public subnet
resource "aws_route_table" "public" {
    vpc_id = "${aws_vpc.vpc.id}"
    
    tags = {
        Name        = "${var.environment}-public-route-table"
        Environment = "${var.environment}"
    }
}

resource "aws_route" "public_internet_gateway" {
    route_table_id         = "${aws_route_table.public.id}"
    destination_cidr_block = "0.0.0.0/0"
    gateway_id             = "${aws_internet_gateway.ig.id}"
}

resource "aws_route" "private_nat_gateway" {
    route_table_id         = "${aws_route_table.private.id}"
    destination_cidr_block = "0.0.0.0/0"
    nat_gateway_id         = "${aws_nat_gateway.nat.id}"
}

# Route table associations
resource "aws_route_table_association" "public" {
    count          = "${length(var.public_subnets_cidr)}"
    subnet_id      = "${element(aws_subnet.public_subnet.*.id, count.index)}"
    route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table_association" "private" {
    count          = "${length(var.private_subnets_cidr)}"
    subnet_id      = "${element(aws_subnet.private_subnet.*.id, count.index)}"
    route_table_id = "${aws_route_table.private.id}"
}
